--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ jwt==1.3.1
 Mako==1.2.4
 MarkupSafe==2.1.3
 pycparser==2.21
+PyJWT==2.8.0
 SQLAlchemy==2.0.19
 typing_extensions==4.7.1
 Werkzeug==2.3.6
